Update preface and back cover

--- a/src/preface.tex
+++ b/src/preface.tex
@@ -49,7 +49,7 @@ simple creatures. And because the Commodore 64 was such a basic computer
 in so many ways, what we end up learning about in this book is a recognisable implementation
 of a foundational concept in information theory:
 \href{https://en.wikipedia.org/wiki/Turing_machine}{\textcolor{blue}{the Turing Machine}}.
-The C64's 64KB of solid state memory is all it has: there is no hard 
+64 kilobytes of integrated circuit memory is almost all the C64 has to play with: there is no hard 
 disk to speak of. So on our journey we find ourselves with a long Turing-style tape on which
 our assembly language instructions operate, hopping back and forth along the 
 65,536 slots on the tape writing and reading values which the computer hardware
